--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-lint": "eslint --fix . --ignore-path ./.gitignore",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "12.0.3",
@@ -13,10 +15,19 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.3",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
-    "eslint": "7",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.4.1",
+    "prettier-eslint": "^13.0.0",
     "typescript": "4.4.4"
   }
 }
